cache impl wip 3